--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,8 @@
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.19.3"
+    "mongoose": "^8.19.3",
+    "resend": "^6.0.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
