--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,8 @@
   "type": "module",
   "license": "ISC",
   "dependencies": {
+    "@arcjet/inspect": "^1.0.0-beta.10",
+    "@arcjet/node": "^1.0.0-beta.10",
     "bcryptjs": "^2.4.3",
     "chat_application_project": "file:..",
     "cloudinary": "^2.5.1",
