--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "chat_application_project": "file:..",
     "cloudinary": "^2.5.1",
     "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
